added header section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- header section code -->
+  <header class="header">
+    <nav class="nabar">
+     <div class="logo">
+        <img src="./Images/Group 40071 (2).png" alt="logo">
+        <h2 class="travel">Hero <span class="tomato">Travel</span></h2>
+     </div>
+     <ul>
+        <li><a class="active" href="">Home</a></li>
+        <li><a href="">Packages</a></li>
+        <li><a href=""></a>Testimonial</li>
+        <li><a href=""></a>Blog</li>
+        <li><a href=""></a>Contact</li>
+     </ul>
+    </nav>
+  </header>
+  <!-- main section code start -->
+  <main class="main">
+    <!-- banner section code -->
+  </main>
 </body>
 </html>
