--- a/index.html
+++ b/index.html
@@ -26,6 +26,84 @@
   <!-- main section code start -->
   <main class="main">
     <!-- banner section code -->
+     <section class="banner-container">
+            <div class="container">
+                <h4 class="travel-heading">Explore Your Travel</h4>
+                <p class="travel-title">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio  enim ac quis sapien urna eu phasellus.</p>
+                <div class="travel-input">
+                    <input type="text" name="" id="" placeholder="Where go">
+                    <select name="" id="">
+                        <option value="">When</option>
+                    </select>
+                 <select name="" id="">
+                    <option value="">Selet Type</option>
+                 </select>
+                 <button class="btn-priamary">Find Now</button>
+                </div>
+            </div>
+     </section>
+     <!-- popular section code -->
+      <section class="container-popular">
+        <div class="content">
+          <h4 class="popular">Our Popular Tours</h4>
+          <p class="popular-title">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+                    odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+          <ul class="ul">
+            <li class="li">Tempus euismod lacus mauris dignissim quis in
+               ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+               <li class="li">Tempus euismod lacus mauris dignissim quis in
+               ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+               <li class="li">Tempus euismod lacus mauris dignissim quis in
+               ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+      </ul>
+      <p class="popular-title">Amet consectetur. Vulputate commodo felis molestie risus 
+        ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant 
+        adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>  
+        <button class="btn-priamary">Read More</button>
+        <div class="ture-img">
+          <img src="Images/Rectangle 4.png" alt="">
+        </div>
+      </div>
+      </section>
+      <section class="card-container">
+        <h6>Choose Your Destination</h6>
+        <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+
+          <div class="row-3">
+            <div class="country-card">
+              <img src="Images/Rectangle 5.png" alt="">
+              <p class="pa">Maldip</p>
+            </div>
+            <div class="country-card">
+              <img src="Images/Rectangle 8.png" alt="">
+              <p class="pa">Indoneshia</p>
+            </div>
+          </div>
+          <div class="row-2">
+            <div class="country-card">
+              <img src="Images/Rectangle 6.png" alt="">
+              <p class="pa">Srilanka</p>
+            </div>
+            <div class="country-card">
+              <img src="Images/Rectangle 7.png" alt="">
+              <p class="pa">North America</p>
+            </div>
+            <div class="country-card">
+              <img src="Images/Rectangle 9.png" alt="">
+              <p class="pa">Kashmir</p>
+            </div>
+          </div>
+          <div class="row-3">
+            <div class="country-card">
+              <img src="Images/Rectangle 11.png" alt="">
+              <p class="pa">Bangladesh</p>
+            </div>
+            <div class="country-card">
+              <img src="Images/Rectangle 10.png" alt="">
+              <p class="pa">Bandarban</p>
+            </div>
+          </div>
+      </section>
   </main>
 </body>
 </html>
