--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="">Packages</a></li>
         <li><a href=""></a>Testimonial</li>
         <li><a href=""></a>Blog</li>
-        <li><a href=""></a>Contact</li>
+        <li><a href="#footer"></a>Contact</li>
      </ul>
     </nav>
   </header>
@@ -69,7 +69,7 @@
         <h6>Choose Your Destination</h6>
         <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
 
-          <div class="row-3">
+          <div class="row-1">
             <div class="country-card">
               <img src="Images/Rectangle 5.png" alt="">
               <p class="pa">Maldip</p>
@@ -105,5 +105,30 @@
           </div>
       </section>
   </main>
+
+  <!-- footer section code -->
+   <footer id="footer">
+    <div class="footer-container">
+      <div class="footer-content">
+       <h4 class="footer-titel"> Travel </h4>
+       <p class="footer-word">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit.
+         At ratione velit nesciunt, ipsam <br> aliquam veritatis et ipsa provident nobis eum!</p>
+      </div>
+      <div class="footer-sec">
+        <h3 class="start">Get Start</h3>
+        <p>About us</p>
+        <p>Contianer</p>
+        <p>Help us</p>
+        <p>Main</p>
+      </div>
+      <div class="footer-sec">
+        <h3 class="start">Get Start</h3>
+        <p>About us</p>
+        <p>Contianer</p>
+        <p>Help us</p>
+        <p>Main</p>
+      </div>
+    </div>
+   </footer>
 </body>
 </html>
